[package]

name = "transfer"
version = "0.0.1"
description = "Something cool."
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/transfer"
readme = "README.md"
license = "MIT"
keywords = ["web"]

[dependencies]
http2parse = "*"
debug_unreachable = "*"
iobuf = { git = "https://github.com/reem/iobuf", branch = "nightly-rustup" }
syncbox = "*"
eventual = { git = "https://github.com/carllerche/eventual" }
mio = { git = "https://github.com/carllerche/mio" }

