[package]

name = "transfer"
version = "0.0.1"
description = "Something cool."
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/transfer"
readme = "README.md"
license = "MIT"
keywords = ["web"]

[dependencies]
http2parse = "*"
debug_unreachable = "*"
syncbox = "*"
eventual = { git = "https://github.com/carllerche/eventual" }
log = "0.3"
appendbuf = "0.1"
mio = { git = "https://github.com/carllerche/mio" }

