[package]

name = "transfer"
version = "0.0.1"
description = "Something cool."
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/transfer"
readme = "README.md"
license = "MIT"
keywords = ["web"]

[features]
random = ["http2parse/random"]

[dependencies]
http2parse = "0.2"
syncbox = "*"
eventual = { git = "https://github.com/carllerche/eventual" }
log = "0.3"
mio = { git = "https://github.com/carllerche/mio" }
byteorder = "0.4"

[dependencies.appendbuf]
version = "0.1"

[dev-dependencies]
env_logger = "0"
rand = "0.3"

